--- a/shippable.yml
+++ b/shippable.yml
@@ -11,8 +11,8 @@ env:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo echo "[mysqld]" > /etc/mysql/conf.d/yafra.cnf
-  - sudo echo "lower_case_table_names=1" >> /etc/mysql/conf.d/yafra.cnf
+  - sudo sh -c 'echo "[mysqld]" > /etc/mysql/conf.d/yafra.cnf'
+  - sudo sh -c 'echo "lower_case_table_names=1" >> /etc/mysql/conf.d/yafra.cnf'
   - sudo mysqladmin shutdown
   - sudo su -c "/usr/bin/mysqld_safe > /dev/null 2>&1 &"
   - sudo mkdir -p /work/yafra-runtime
