feat: added cmake support
added a first set of cmake enabled libraries and exes.

yafra.org C/C++ project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ project(travelDB)
 
 add_subdirectory (org.yafra.clibs/libs/pssys)
 add_subdirectory (org.yafra.clibs/libs/pssys/testsuite/chars)
+add_subdirectory (org.yafra.clibs/libs/pssys/testsuite/datetime)
 add_subdirectory (org.yafra.clibs/libs/psipc)
 add_subdirectory (org.yafra.clibs/libs/pssercom)
 add_subdirectory (org.yafra.clibs/libs/psmodul)
@@ -25,4 +26,7 @@ add_subdirectory (org.yafra.clibs/libs/psmume)
 add_subdirectory (org.yafra.clibs/libs/psgui)
 add_subdirectory (org.yafra.clibs/libs/matrix)
 add_subdirectory (org.yafra.tdb.addons.pswhat)
+#add_subdirectory (org.yafra.tdb.addons.psedit)
+#add_subdirectory (org.yafra.tdb.addons.cmdsrv)
+add_subdirectory (org.yafra.tdb.classic/lib)
 
